--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -17,13 +17,16 @@
 * {
     box-sizing: border-box;
 }
-body {
+
+body,
+html,
+#root {
     margin: 0;
+    padding: 0;
     display: flex;
     place-items: center;
     width: 100vw;
-    min-height: 100vh;
-    height: 100%;
+    min-height: 100%;
 }
 
 .sale-banner h1 {
