--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -30,7 +30,7 @@ html,
 }
 
 .sale-banner h1 {
-    background-image: url('./background.png');
+    background-image: url('/background.png');
     background-size: cover;
     background-position: center;
     -webkit-background-clip: text;
